0.83.10
  - Added "Save & Restart" button to the Configuration
    Tool's "Save" option for saving the config file and
    then automatically restarting DOSBox-X with this
    saved configuration. Command-line options -wcboot,
    -wcdboot and -wcpboot are added to CONFIG command
    which resemble -wc, -wcd, and -wcp options but will
    reboot DOSBox-X after writing configfile. (Wengier)
  - The config option ttf.font will now search for TTF
    fonts in the directory as specified by the fontpath
    option in [printer] section too. (Wengier)
  - The commands "config -set fullscreen=true" and
    "config -set fullscreen=false" can now switch on or
    off the full-screen mode. You can also change the
    TTF font, number of rows in the TTF screen or the
    GLSL shader dynamically using CONFIG command, e.g.
    "config -set ttf.font=test", "config -set ttf.lins
    =30", and "config -set glshader=sharp". (Wengier)
  - Fixed Ctrl+C not working in GNU ed. (Wengier)
  - Fixed incorrect behavior for handling trap flags
    in the dynamic core. (koolkdev)
  - Updated the Tiny File Dialog library to the latest
    version v3.8.4. (Wengier)
  - Improved OPL3Duo support, such as adding a buffer
    thread to get rid of slowdowns & breakups in audio
    playback when using the board. (DhrBaksteen)

0.83.9
  - Physical CD drives are now mountable in SDL2 builds
    just like SDL1 builds, so commands like "MOUNT -CD"
    should work in both SDL1 and SDL2 builds. Some code
    is adopted from the SDL2_CDROM library. (Wengier)
  - Implemented file locking support for mounting disk
    image files so that you cannot mount the same disk
    image files in read/write mode at the same time as
    this can cause possible disk corruptions. A config
    option "locking disk image mount" is added to the
    [dosbox] section which when set to false (or if the
    user mounts the image files read-only) will bypass
    the locking of image files. Also improved the DOS